# scraper

./: CMakeLists.txt  MyHttpClient.h  README.md  court_context.h  main.cpp  messagestore.h  mylittlehttpclient.h  query_executor.cpp  query_executor.h  scheduler.h
new/: Parser.cpp  Parser.h
tests/: CMakeLists.txt  data.json  scraper_test.cpp
